--- a/CSS/style.css
+++ b/CSS/style.css
@@ -56,3 +56,30 @@
   border: 1px solid white;
   opacity: 1;
 }
+
+.buttons {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: absolute;
+  height: 100%;
+  top: 0;
+  right: 85px;
+  padding: 10px 0
+}
+
+.btn-arrow {
+  color: white;
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+  border-radius: 50%;
+  background-color: rgba(0, 0, 0, 0.631);
+  text-align: center;
+  cursor: pointer;
+}
+
+.btn-arrow:hover {
+  color: black;
+  background-color: white;
+}
